--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <title>MiFarma.com | Farmacia online</title>
@@ -22,7 +23,7 @@
         </header>
         <hr>
 
-        <section>
+        <section class="section">
             <h3>
                 ¡Sumate a TuFarma!
             </h3>
@@ -41,7 +42,7 @@
             </form>
         </section>
 
-        <main>
+        <main class="main">
             <article>
                 <p>Bienvenido a <strong>MiFarma.com</strong> tu farmacia online de confianza!!</p>
             </article>
@@ -75,7 +76,7 @@
 
         <hr>
 
-        <footer>
+        <footer class="footer">
             <h6>
                 MiFarma@gmail.com
             </h6>
