--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
                 </table>
                 <hr>
                 <h4 numero="total">Total a pagar $:</h4>
+                <h4>
+                    <button id="vaciar" type="button" class="btn btn-danger">Vacias carrito ❌</button>
+                </h4>
             </section>
         </main>
 
