--- a/index.html
+++ b/index.html
@@ -4,17 +4,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="./style.css">
+
     <title>MiFarma.com | Farmacia online</title>
 </head>
 
-<body>
+<body class="body">
     <div class="conteiner">
         <header>
             <h1 class="text-center">
                 MiFarma.com
+                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
+                    class="bi bi-prescription2" viewBox="0 0 16 16">
+                    <path d="M7 6h2v2h2v2H9v2H7v-2H5V8h2V6Z" />
+                    <path
+                        d="M2 1a1 1 0 0 1 1-1h10a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1v10.5a1.5 1.5 0 0 1-1.5 1.5h-7A1.5 1.5 0 0 1 3 14.5V4a1 1 0 0 1-1-1V1Zm2 3v10.5a.5.5 0 0 0 .5.5h7a.5.5 0 0 0 .5-.5V4H4ZM3 3h10V1H3v2Z" />
+                </svg>
             </h1>
 
             <h2>
@@ -48,7 +57,7 @@
             </article>
 
 
-            <section id="misprods" class="row">
+            <section id="misprods" class="row" class="card">
                 <!-- Aqui los productos -->
             </section>
 
@@ -58,21 +67,21 @@
             <section>
                 <h4>Tu carrito:</h4>
                 <table class="table table-striped">
-                    <thead>
+                    <thead class="table">
                         <tr>
-                            <th>Numero</th>
-                            <th>Nombre</th>
+                            <th>Numero de producto</th>
+                            <th>Nombre Producto</th>
                             <th>Precio</th>
                         </tr>
                     </thead>
                     <tbody id="tablabody">
-                        <!-- aqui tabla carrito -->
+
                     </tbody>
                 </table>
                 <hr>
-                <h4 numero="total">Total a pagar $:</h4>
+                <h4 numero="total">Total a pagar $: </h4>
                 <h4>
-                    <button id="vaciar" type="button" class="btn btn-danger">Vacias carrito ❌</button>
+                    <button id="vaciar" type="button" class="btn btn-danger">Vaciar carrito!!</button>
                 </h4>
             </section>
         </main>
@@ -80,8 +89,15 @@
         <hr>
 
         <footer class="footer">
-            <h6>
+            <h6 class="text-center">
                 MiFarma@gmail.com
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                    class="bi bi-envelope-at" viewBox="0 0 16 16">
+                    <path
+                        d="M2 2a2 2 0 0 0-2 2v8.01A2 2 0 0 0 2 14h5.5a.5.5 0 0 0 0-1H2a1 1 0 0 1-.966-.741l5.64-3.471L8 9.583l7-4.2V8.5a.5.5 0 0 0 1 0V4a2 2 0 0 0-2-2H2Zm3.708 6.208L1 11.105V5.383l4.708 2.825ZM1 4.217V4a1 1 0 0 1 1-1h12a1 1 0 0 1 1 1v.217l-7 4.2-7-4.2Z" />
+                    <path
+                        d="M14.247 14.269c1.01 0 1.587-.857 1.587-2.025v-.21C15.834 10.43 14.64 9 12.52 9h-.035C10.42 9 9 10.36 9 12.432v.214C9 14.82 10.438 16 12.358 16h.044c.594 0 1.018-.074 1.237-.175v-.73c-.245.11-.673.18-1.18.18h-.044c-1.334 0-2.571-.788-2.571-2.655v-.157c0-1.657 1.058-2.724 2.64-2.724h.04c1.535 0 2.484 1.05 2.484 2.326v.118c0 .975-.324 1.39-.639 1.39-.232 0-.41-.148-.41-.42v-2.19h-.906v.569h-.03c-.084-.298-.368-.63-.954-.63-.778 0-1.259.555-1.259 1.4v.528c0 .892.49 1.434 1.26 1.434.471 0 .896-.227 1.014-.643h.043c.118.42.617.648 1.12.648Zm-2.453-1.588v-.227c0-.546.227-.791.573-.791.297 0 .572.192.572.708v.367c0 .573-.253.744-.564.744-.354 0-.581-.215-.581-.8Z" />
+                </svg>
             </h6>
         </footer>
     </div>
