--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     </tbody>
                 </table>
                 <hr>
-                <h4 numero="total">Total a pagar $: </h4>
+                <h4 id="totalVisual" numero="total">Total a pagar $: </h4>
                 <h4>
                     <button id="vaciar" type="button" class="btn btn-danger">Vaciar carrito!!</button>
                 </h4>
@@ -110,6 +110,7 @@
         crossorigin="anonymous"></script>
     <script src="productos.js"></script>
     <script src="index.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 
 </html>
